# parse_jobs

./: README.md  jobs.sqlite3  pyproject.toml  scrapy.cfg
scrapy_it/: items.py  middlewares.py  pipelines.py  settings.py
scrapy_it/spiders/: workua.py
